kubernetes/infrastructure/flux-system/webhook/app/webhook-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: http
  hostnames:
    - "flux.whoverse.nexus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
